@@ -11,7 +11,6 @@ TODO
 19. Object has start_time with check_number(). Is it ok?
 20. Add tests for errors in PublicationDate.
 21. Compose PublicationDate object to main object.
-22. Add tests for cycles.
 23.
 
 Applied
@@ -46,3 +45,6 @@ OK [20231114] skim
 
 13. Change publisher in Series to object (like a isbn)
 OK [20240625] skim
+
+22. Add tests for cycles.
+OK [20250327] skim
